...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose your Piclet Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GkX-4d-4kE">
                                <rect key="frame" x="80" y="191" width="430" height="19.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dbt-NR-yg3">
                                <rect key="frame" x="80" y="220" width="430" height="24"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="7zC-XR-TQu"/>
                                </constraints>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" returnKeyType="next"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GlD-It-Ulb">
                                <rect key="frame" x="256" y="286" width="87" height="27"/>
                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                <state key="normal" title="Create account">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="pressedCreateAccount:" destination="3iX-Bg-CnF" eventType="touchUpInside" id="r3l-K0-h5D"/>
                                </connections>
                            </button>
...
