...
extension UIAlertController {
    
    public class func createErrorAlert(errorCode: String) -> UIAlertController {
        let error = ErrorHandler().getTitleAndMessageError(errorCode)
        
        let alertController = UIAlertController(title: error.title, message: error.message, preferredStyle: UIAlertControllerStyle.Alert)
            alertController.addAction(UIAlertAction(title: "OK", style: UIAlertActionStyle.Default, handler: nil))
        
        return alertController
    }
    
    public class func createAlertWithLoginSegue(errorCode: String, viewController: UIViewController) -> UIAlertController {
        let error = ErrorHandler().getTitleAndMessageError(errorCode)
...
